<?xml version="1.0"?>
<package format="2">
  <name>rico_gmapping</name>
  <version>0.1.0</version>
  <description>rico's gmapping implementation</description>

  <maintainer email="ruotongjia2020@u.northwestern.edu">ricojia</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>

    <exec_depend>message_runtime</exec_depend>
    <build_depend>message_generation</build_depend>

</package>

